@@ -1,3 +1,11 @@
+Development Portal (2021-09-23 shi)
+==============================
+Fix css for participating-org id alignment
+Display comments for results data
+Update facet value type css
+Update facet separator
+
+
 Development Portal (2021-08-07 shi)
 ==============================
 Update reference column for participating-org in SAVi
